removed unnecessary space updates that triggered based on page visibility API - these will now only trigger if socket disconnected. fixed socket resetting on rerenders

--- a/client/src/components/layouts/SpaceList.module.scss
+++ b/client/src/components/layouts/SpaceList.module.scss
@@ -7,10 +7,9 @@
 		border-top: 0;
 		border-radius: 8px;
 		transition: border-radius 0.4s;
-		overflow: scroll;
+		overflow-y: scroll;
 		font-size: 12px;
 		> .content {
-			overflow: scroll;
 			padding: 20px;
 		}
 	}
